grafana/probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grafana-probes
  namespace: monitoring
spec:
  containers:
  - name: grafana
    image: grafana/grafana:9.5.2
