grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
    component: core
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
